FAI-3590 Fix dashboard stats
